--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "node --watch"
+    "dev": "node --watch index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "eslint": "^9.8.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "path": "^0.12.7",
     "pg": "^8.12.0",
     "prettier": "^3.3.3"
   }
