--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
     "env": {
-        "commonjs": false,
+        "commonjs": true,
         "es2021": true,
         "node": true,
         "browser": true
